// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/Pluggable should match snapshot with extended component 1`] = `
<Pluggable
  components={
    Object {
      "PopoverSection1": Array [
        Object {
          "component": [Function],
        },
      ],
    }
  }
  pluggableName="PopoverSection1"
  theme={Object {}}
>
  <ProfilePopoverPlugin
    key="PopoverSection1undefined"
    theme={Object {}}
    webSocketClient={
      WebSocketClient {
        "closeCallback": null,
        "conn": null,
        "connectFailCount": 0,
        "connectionId": "",
        "connectionUrl": null,
        "errorCallback": null,
        "eventCallback": null,
        "firstConnectCallback": null,
        "missedEventCallback": null,
        "reconnectCallback": null,
        "responseCallbacks": Object {},
        "responseSequence": 1,
        "serverSequence": 0,
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with extended component with pluggableName 1`] = `
<Pluggable
  components={
    Object {
      "PopoverSection1": Array [
        Object {
          "component": [Function],
        },
      ],
    }
  }
  pluggableName="PopoverSection1"
  theme={Object {}}
>
  <ProfilePopoverPlugin
    key="PopoverSection1undefined"
    theme={Object {}}
    webSocketClient={
      WebSocketClient {
        "closeCallback": null,
        "conn": null,
        "connectFailCount": 0,
        "connectionId": "",
        "connectionUrl": null,
        "errorCallback": null,
        "eventCallback": null,
        "firstConnectCallback": null,
        "missedEventCallback": null,
        "reconnectCallback": null,
        "responseCallbacks": Object {},
        "responseSequence": 1,
        "serverSequence": 0,
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with no extended component 1`] = `
<Pluggable
  components={Object {}}
  pluggableName=""
  theme={Object {}}
/>
`;

exports[`plugins/Pluggable should match snapshot with non-null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "PopoverSection1": Array [
        Object {
          "component": [Function],
        },
      ],
    }
  }
  pluggableId="pluggableId"
  pluggableName="PopoverSection1"
/>
`;

exports[`plugins/Pluggable should match snapshot with null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "PopoverSection1": Array [
        Object {
          "component": [Function],
        },
      ],
    }
  }
  pluggableName="PopoverSection1"
  theme={Object {}}
>
  <ProfilePopoverPlugin
    key="PopoverSection1undefined"
    theme={Object {}}
    webSocketClient={
      WebSocketClient {
        "closeCallback": null,
        "conn": null,
        "connectFailCount": 0,
        "connectionId": "",
        "connectionUrl": null,
        "errorCallback": null,
        "eventCallback": null,
        "firstConnectCallback": null,
        "missedEventCallback": null,
        "reconnectCallback": null,
        "responseCallbacks": Object {},
        "responseSequence": 1,
        "serverSequence": 0,
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with valid pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "pluggableId",
        },
      ],
    }
  }
  pluggableId="pluggableId"
  pluggableName="PopoverSection1"
  theme={Object {}}
>
  <ProfilePopoverPlugin
    key="PopoverSection1pluggableId"
    theme={Object {}}
    webSocketClient={
      WebSocketClient {
        "closeCallback": null,
        "conn": null,
        "connectFailCount": 0,
        "connectionId": "",
        "connectionUrl": null,
        "errorCallback": null,
        "eventCallback": null,
        "firstConnectCallback": null,
        "missedEventCallback": null,
        "reconnectCallback": null,
        "responseCallbacks": Object {},
        "responseSequence": 1,
        "serverSequence": 0,
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;
